fix: index, spacing and pictures

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -156,7 +156,7 @@ main {
 
   text-align: center;
   font-size: clamp(2rem, 10vw, 8rem);
-  padding: 250px 0 100px 0;
+  padding: 50px 0 30px 0;
   line-height: 1.2;
 }
 
@@ -165,7 +165,7 @@ main {
   font-size: 2rem;
   line-height: 1.4;
   margin-bottom: 20px;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
 }
 
 .section h3 {
@@ -180,7 +180,7 @@ p {
   font-size: 1rem;
   text-align: center;
   padding: 10px;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
   line-height: 1.6;
 }
 div p {
@@ -208,7 +208,7 @@ blockquote {
 }
 
 .imageflex img {
-  max-width: 100%;
+  max-width: 55%;
   height: auto;
   border-radius: 20px;
 }
@@ -326,7 +326,7 @@ footer {
   backdrop-filter: blur(10px);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   color: var(--cor-branca);
-  padding: 40px 20px;
+  padding: 20px 20px;
   font-size: 0.95rem;
   text-align: center;
 }
@@ -482,7 +482,7 @@ footer p {
     padding: 30px 60px;
   }
   footer {
-    padding: 60px 80px;
+    padding: 30px 40px;
     font-size: 1rem;
   }
   .footer-section h3 {
